[package]
name = "gemini-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
oauth2 = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
clap = { version = "4.5.57", features = ["derive"] }
futures-util = "0.3.31"
tower-http = { version = "0.6.8", features = ["cors"] }
anyhow = "1.0.101"
tokio-stream = "0.1.18"
url = "2.5.8"
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.29"
home = "0.5.12"
rand = "0.10.0"
